fixed spacing

--- a/src/Components/css/aboutUs.css
+++ b/src/Components/css/aboutUs.css
@@ -1,5 +1,5 @@
 .aboutUs{
-    min-height: 100svh;
+    min-height: 100vh;
     color: #C3E0E5;
     scroll-snap-align: center;
     display: flex;
