--- a/src/Components/css/contactUs.css
+++ b/src/Components/css/contactUs.css
@@ -1,6 +1,6 @@
 .contactUs{
     display: flex;
-    min-height: 100svh;
+    min-height: 100vh;
     scroll-snap-align: center;
     background: 
     linear-gradient(0deg,
@@ -20,21 +20,21 @@
     color: #C3E0E5;
     justify-content: space-around;
     flex-wrap: wrap;
-    align-content: space-between;
+    align-content: flex-start;
     padding: 40px 40px 0px 40px;
     box-sizing: border-box;
 }
 
 .contactUsLeft{
-    /* border: 1px solid; */
+    border: 1px solid;
     width: 40%;
-    margin: 50px 0px 50px 50px;
+    margin: 0px 0px 0px 50px;
 }
 
 .contactUsRight{
-    /* border: 1px solid; */
+    border: 1px solid;
     width: 40%;
-    margin: 50px 50px 50px 0px;
+    margin: 0px 50px 00px 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -97,6 +97,7 @@
     /* border: 1px solid; */
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 20px;
     
 }
 #message{
@@ -108,7 +109,8 @@
     font-size: 0.8rem;
     text-align: center;
     height: 10%;
-    /* border: 1px solid; */
+    margin-bottom: 40px;
+    border: 1px solid;
 }
 
 @media (width < 1024px) {
